--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@nivo/heatmap": "^0.87.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "google-map-react": "^2.2.1",
+    "google-maps-react-markers": "^2.0.10",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "proj4": "^2.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "utm-latlng": "^1.0.8",
+    "vercel": "^34.2.4"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.10",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
