--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nivo/heatmap": "^0.87.0",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "google-map-react": "^2.2.1",
