--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@nivo/heatmap": "^0.87.0",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "google-map-react": "^2.2.1",
@@ -20,19 +23,23 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "proj4": "^2.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "utm-latlng": "^1.0.8",
-    "vercel": "^34.2.4"
+    "vercel": "^34.2.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
